src/App.css
.App {
  text-align: center;
}

body {
  background-color: #292833;
  color: #f5f1f1;
  font-family: 'Overpass';
}

.container{
background-color: #292833;
}

.IconButton {
  margin: 0 0 0 0;
}

.btn {
  background-color: purple;
  border: none;
  color: white;
  padding: 12px 16px;
  font-size: 16px;
  cursor: pointer;
}

.testimonial-group > .row {
  display: block;
  overflow-x: auto;
  white-space: nowrap;
}
.testimonial-group > .row > .col-2 {
  display: inline-block;
}

.Post {
  border-style: solid;
  border-radius: 5px;
  border-color: #5F5177;
  border-width: 2px;
  padding-bottom: 0px;
  padding-left: 20px;
}

.commentBorder {
  border-style: solid;
  border-radius: 5px;
  border-color: #5F5177;
  border-width: 2px;
  padding-bottom: 0px;
  padding-left: 20px;
}

*:focus {
  outline: none;
}

#searchBar {
  color: #BF9AFC
}

.rbt-input-main, .rbt-input-main:focus, .rbt-input-hint, .rbt-menu {
  color: #BF9AFC;
  background-color: transparent;
  border: none;
}

.rbt-input-main:focus, input:focus, textarea:focus, button:focus {
  outline: none !important;
  box-shadow: 0 0 0 0 rgba(0, 0, 0, 0) !important;
}

.rbt-menu {
  background-color: #292833;
  border: solid 2px #BF9AFC;
}

.dropdown-item:hover {
 background-color: #BF9AFC; 
}

.border, .border-secondary {
  color: #BF9AFC;
  border-color: #BF9AFC !important;
}

::placeholder, textarea::placeholder {
  color: #5F5177;
}

Input{
  background-color: #292833;
}

